<resources>
    <string name="app_name">TicTacToe</string>
    <string name="summary_text">SummaryText</string>
    <string name="log_in_register_button">Log In / Register</string>
    <string name="login_username">Name</string>
    <string name="login_password">Password</string>
    <string name="login_button">Submit</string>
    <string name="login_register_link"><u>Create an account</u></string>
    <string name="register_new_textview">Register</string>
    <string name="register_user_name">Name</string>
    <string name="register_user_nickname">Nickname (for others to see)</string>
    <string name="register_user_button">Register</string>
    <string name="register_user_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_user_email">Email</string>
    <string name="login_name_empty">Type username</string>
    <string name="login_password_empty">Enter password</string>
    <string name="bad_login_error">Bad username or password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_favorite">Logged In</string>
    <string name="title">TicTacToe</string>
    <string name="user_profile_name">TextView</string>
    <string name="user_profile_name_textview">User name :</string>
    <string name="user_profile_nickname_textview">User nickname :</string>
    <string name="user_profile_email_textview">User email :</string>
    <string name="show_history">Show history</string>
    <string name="show_moves_button">Show moves</string>
    <string name="table_row_first_player_header">First Player</string>
    <string name="table_row_second_player_header">Second Player</string>
    <string name="table_row_date_header">Date</string>
    <string name="table_row_action">Action</string>
    <string name="field_header_game_move">Field</string>
    <string name="symbol_header_game_move">Symbol</string>
    <string name="time_header_game_move">Time</string>
    <string name="registration_field_empty_text">Field cannot be empty</string>
    <string name="start_join_game_button">Start or join a game</string>
    <string name="start_or_join_game_textview">Start or Join a Game</string>
    <string name="start_game_button">START</string>
    <string name="join_game_button_text">JOIN</string>
    <string name="join_specific_game_button_text">JOIN</string>
    <string name="game_host_table_header">Game Host</string>
    <string name="second_player_table_header">Second Player</string>
</resources>
