<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mprtcz.tictactoe.activities.LoginActivity"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/login_username"
        android:ems="10"
        android:id="@+id/loginUsername" />

    <EditText
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword" />

    <Button
        android:text="@string/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButtonConfirm" />

    <TextView
        android:text="@string/login_register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="onLoginRegisterLinkTextViewClicked"
        android:id="@+id/loginRegisterLinkTextView" />

</LinearLayout>
